recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:5: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
		avance()
                      ^Spiral:6: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
		gauche()
                      ^